--- a/academics.html
+++ b/academics.html
@@ -59,16 +59,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav initialism" >
                     <li >
-                        <a href="research.php">research</a>
+                        <a href="research.html">research</a>
                     </li>
                     <li>
-                        <a href="academics.php">academics</a>
+                        <a href="academics.html">academics</a>
                     </li>
                     <li>
-                        <a href="mentor.php">mentoring</a>
+                        <a href="mentor.html">mentoring</a>
                     </li>
                     <li>
-                        <a href="misc.php">miscellaneous</a>
+                        <a href="misc.html">miscellaneous</a>
                     </li>
                 </ul>
             </div>
