--- a/misc.html
+++ b/misc.html
@@ -53,7 +53,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand initialism" href="index.php"> about me</a>
+                <a class="navbar-brand initialism" href="index.html"> about me</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
