--- a/academics.html
+++ b/academics.html
@@ -34,62 +34,138 @@
 
 <body>
 
-    <!-- Navigation -->
-
-    <div class="container">
-	<h1 style="font-size:5rem; margin-bottom: 0.2rem;">Somesh Singh</h1>				
-
-	<h4 style="margin-top: 0.3rem; margin-left: 0.5rem; margin-bottom:1em;">PhD Candidate,
-	 <a href = "http://www.cse.iitm.ac.in/" target="_blank">CSE</a>, 
-	 <a href = "https://www.iitm.ac.in/" target="_blank">IITM</a>
-	</h4> 
-
-    	   <nav class="navbar navbar-inverse navbar-static-top" >
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand initialism" href="index.html"> about me</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav initialism" >
-                    <li >
-                        <a href="research.html">research</a>
-                    </li>
-                    <li>
-                        <a href="academics.html">academics</a>
-                    </li>
-                    <li>
-                        <a href="mentor.html">mentoring</a>
-                    </li>
-                    <li>
-                        <a href="misc.html">miscellaneous</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-   </nav>
-    
-   <!-- Page Content -->
+    <!-- Page Content -->
     <div class="container">
 
         <div class="row">
 <!--
 	<div class="col-sm-3 col-lg-4">
-	<img src="img/me.jpg"  class="img-responsive" alt="Somesh's pic"> 
+	<img src="img/me.jpg"  class="img-responsive" alt="Somesh's pic">
         </div>
 -->
             <div class="col-lg-12">
+<h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Academics </h3>
 
 <!-- Pic saying page is under construction-->
-     <p style="text-align:center; "><img style="max-width: 50%; margin-top: 1rem;" src="./img/construction.gif" alt="under_construction" border="2" /></p> 
+<!--
+     <p style="text-align:center; "><img style="max-width: 50%; margin-top: 1rem;" src="./img/construction.gif" alt="under_construction" border="2" /></p>
+-->
+
+<h3>Coursework</h3>
+<div style="font-size: 16px">
+         <ul>
+	    <li>
+		<dl>
+                <dt>
+		Advanced Data Structures and Algorithms
+		<span style="font-weight:normal; float: right"> Aug-Nov 2014 </span>
+		</dt>
+		<dd style="font-size:14px">
+		Instructors: <a href="https://www.cse.iitm.ac.in/~meghana/" target="_blank">
+		Dr. Meghana Nasre </a> and
+		<a href="https://sites.google.com/site/augustineiitm/" target="_blank">
+		Dr. John Augustine </a>
+		</dd>
+		</dl>
+	    </li>
+	    <li>
+		<dl>
+                <dt>
+		Mathematical Concepts for Computer Science
+		<span style="font-weight:normal; float: right"> Aug-Nov 2014 </span>
+		</dt>
+		<dd style="font-size:14px">
+		Instructor: <a href="http://www.cse.iitm.ac.in/~bvrr/" target="_blank">
+		Dr. Raghavendra Rao B. V. </a>
+		</dd>
+		</dl>
+	    </li>
+	    <li>
+		<dl>
+                <dt>
+		Program Analysis
+		<span style="font-weight:normal; float: right"> Jan-May 2015 </span>
+		</dt>
+		<dd style="font-size:14px">
+		Instructor: <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>
+		</dd>
+		</dl>
+	    </li>
+	    <li>
+		<dl>
+                <dt>
+		Digital Design Verification
+		<span style="font-weight:normal; float: right"> Jan-May 2015 </span>
+		</dt>
+		<dd style="font-size:14px">
+		 Instructors: <a href="http://rise.cse.iitm.ac.in/people/faculty/kama/kama.html" target="_blank"> Dr. V. Kamakoti  </a> and
+			      Dr. V. Visvanathan
+		</dd>
+		</dl>
+	    </li>
+	    <li>
+		<dl>
+                <dt>
+		CAD for VLSI Systems
+		<span style="font-weight:normal; float: right"> Aug-Nov 2015 </span>
+		</dt>
+		<dd style="font-size:14px">
+		 Instructors: <a href="http://rise.cse.iitm.ac.in/people/faculty/kama/kama.html" target="_blank"> Dr. V. Kamakoti </a> and
+			      Dr. V. Visvanathan
+		</dd>
+		</dl>
+	    </li>
+	    <li>
+		<dl>
+                <dt>
+		High-Performance Parallel Computing
+		<span style="font-weight:normal; float: right"> June  2016 </span>
+		</dt>
+		<dd style="font-size:14px">
+		Instructors: <a href="http://web.cse.ohio-state.edu/~saday/" target="_blank"> <i> Prof.</i> P. Sadayappan </a> and
+		<a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>
+		</dd>
+		</dl>
+	    </li>
+	    <li>
+		<dl>
+            <dt>
+		Computer Architecture
+		<span style="font-weight:normal; float: right"> Aug-Nov 2016 </span>
+		</dt>
+		<dd style="font-size:14px">
+		Instructor: <a href="http://www.pradeeprama.info/Home.html" target="_blank">
+		Dr. Pradeep Ramachandran </a>
+		</dd>
+		</dl>
+	    </li>
+	    <li>
+		<dl>
+                <dt>
+		Probability and Computing
+		<span style="font-weight:normal; float: right"> Aug-Nov 2016 </span>
+		</dt>
+		<dd style="font-size:14px">
+		Instructor: <a href="https://sites.google.com/site/augustineiitm/" target="_blank">
+		Dr. John Augustine </a>
+		</dd>
+		</dl>
+	    </li>
+	    <li>
+		<dl>
+                <dt>
+		Indexing and Searching in Large Datasets
+		<span style="font-weight:normal; float: right"> Aug-Nov 2016 </span>
+		</dt>
+		<dd style="font-size:14px">
+		 Instructor: <a href="http://www.cse.iitm.ac.in/~sayan/" target="_blank"> Dr. Sayan Ranu </a>
+		</dd>
+		</dl>
+	    </li>
+	</ul>
+</div>
+
+
 
            </div>
 
@@ -109,4 +185,5 @@
 </body>
 
 </html>
+
 
