updating mentor.html

--- a/mentor.html
+++ b/mentor.html
@@ -36,6 +36,49 @@
 
     <!-- Navigation -->
 
+    <div class="container">
+	<h1 style="font-size:5rem; margin-bottom: 0.2rem;">Somesh Singh</h1>				
+
+	<h4 style="margin-top: 0.3rem; margin-left: 0.5rem; margin-bottom:1em;">PhD Candidate,
+	 <a href = "http://www.cse.iitm.ac.in/" target="_blank">CSE</a>, 
+	 <a href = "https://www.iitm.ac.in/" target="_blank">IITM</a>
+	</h4> 
+
+    	   <nav class="navbar navbar-inverse navbar-static-top" >
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand initialism" href="index.php"> about me</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav initialism" >
+                    <li >
+                        <a href="research.php">research</a>
+                    </li>
+                    <li>
+                        <a href="academics.php">academics</a>
+                    </li>
+                    <li>
+                        <a href="mentor.php">mentoring</a>
+                    </li>
+                    <li>
+                        <a href="misc.php">miscellaneous</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+   </nav>
+
+    <!-- Navigation -->
+
 <!-- Page Content -->
     <div class="container">
 
