updating mentor.html

--- a/mentor.html
+++ b/mentor.html
@@ -53,22 +53,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand initialism" href="index.php"> about me</a>
+                <a class="navbar-brand initialism" href="index.html"> about me</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav initialism" >
                     <li >
-                        <a href="research.php">research</a>
+                        <a href="research.html">research</a>
                     </li>
                     <li>
-                        <a href="academics.php">academics</a>
+                        <a href="academics.html">academics</a>
                     </li>
                     <li>
-                        <a href="mentor.php">mentoring</a>
+                        <a href="mentor.html">mentoring</a>
                     </li>
                     <li>
-                        <a href="misc.php">miscellaneous</a>
+                        <a href="misc.html">miscellaneous</a>
                     </li>
                 </ul>
             </div>
@@ -89,7 +89,7 @@
         </div>
 -->
             <div class="col-lg-12">
-
+<h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Mentoring </h3>
 <!-- Pic saying page is under construction-->
 
 <!--
