--- a/misc.html
+++ b/misc.html
@@ -87,10 +87,11 @@
         </div>
 -->
             <div class="col-lg-12">
-
+<h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Academics </h3>
 <!-- Pic saying page is under construction-->
+<!--
      <p style="text-align:center; "><img style="max-width: 50%; margin-top: 1rem;" src="./img/construction.gif" alt="under_construction" border="2" /></p>
-
+-->
         </div>
       
 
