--- a/research.html
+++ b/research.html
@@ -87,7 +87,8 @@
         </div>
 -->
             <div class="col-lg-12">
-
+<h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Research </h3>
+</br>
 <blockquote class="blockquote" style="background:#eff">
       <p>
 	<i> &#34;Although this may seem a paradox, all exact
