modifying index.html

--- a/startbootstrap-bare-gh-pages/index.html
+++ b/startbootstrap-bare-gh-pages/index.html
@@ -49,6 +49,18 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    <li >
+                        <a href="research.html">research</a>
+                    </li>
+                    <li>
+                        <a href="academics.html">academics</a>
+                    </li>
+                    <li>
+                        <a href="mentor.html">mentoring</a>
+                    </li>
+                    <li>
+                        <a href="misc.html">miscellaneous</a>
+                    </li>
                     <li>
                         <a href="#">About</a>
                     </li>
