--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand initialism" href="index.html"> about me</a>
             </div>
@@ -81,6 +82,7 @@
     <div class="container">
 
         <div class="row">
+
 	<div class="col-sm-3 col-lg-4">
 	<img src="img/me.jpg"  class="img-responsive" alt="Somesh's pic"> 
         </div>
