--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+    <script> $(function(){ $('.nav-tabs a:first').tab('show'); }); </script>
+
+
 </body>
 
 </html>
