--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
+                  </button> 
+                  <!--jQuery is required for the toggle button to work -->
                 <a class="navbar-brand initialism" href="index.html"> about me</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
