modifying academics.html

--- a/academics.html
+++ b/academics.html
@@ -99,7 +99,7 @@
 		<dl>
                 <dt>
 		Advanced Data Structures and Algorithms
-		<span style="font-weight:normal; float: right"> Aug-Nov 2014 </span>
+    <!--		<span style="font-weight:normal; float: right"> Aug-Nov 2014 </span> -->
 		</dt>
 		<dd style="font-size:14px">
 		Instructors: <a href="https://www.cse.iitm.ac.in/~meghana/" target="_blank">
@@ -113,7 +113,7 @@
 		<dl>
                 <dt>
 		Mathematical Concepts for Computer Science
-		<span style="font-weight:normal; float: right"> Aug-Nov 2014 </span>
+    <!--		<span style="font-weight:normal; float: right"> Aug-Nov 2014 </span> -->
 		</dt>
 		<dd style="font-size:14px">
 		Instructor: <a href="http://www.cse.iitm.ac.in/~bvrr/" target="_blank">
@@ -125,7 +125,7 @@
 		<dl>
                 <dt>
 		Program Analysis
-		<span style="font-weight:normal; float: right"> Jan-May 2015 </span>
+    <!--    <span style="font-weight:normal; float: right"> Jan-May 2015 </span> -->
 		</dt>
 		<dd style="font-size:14px">
 		Instructor: <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>
@@ -136,7 +136,7 @@
 		<dl>
                 <dt>
 		Digital Design Verification
-		<span style="font-weight:normal; float: right"> Jan-May 2015 </span>
+    <!-- <span style="font-weight:normal; float: right"> Jan-May 2015 </span> -->
 		</dt>
 		<dd style="font-size:14px">
 		 Instructors: <a href="http://rise.cse.iitm.ac.in/people/faculty/kama/kama.html" target="_blank"> Dr. V. Kamakoti  </a> and
@@ -148,7 +148,7 @@
 		<dl>
                 <dt>
 		CAD for VLSI Systems
-		<span style="font-weight:normal; float: right"> Aug-Nov 2015 </span>
+    <!-- 	<span style="font-weight:normal; float: right"> Aug-Nov 2015 </span> -->
 		</dt>
 		<dd style="font-size:14px">
 		 Instructors: <a href="http://rise.cse.iitm.ac.in/people/faculty/kama/kama.html" target="_blank"> Dr. V. Kamakoti </a> and
@@ -160,7 +160,7 @@
 		<dl>
                 <dt>
 		High-Performance Parallel Computing
-		<span style="font-weight:normal; float: right"> June  2016 </span>
+    <!--  <span style="font-weight:normal; float: right"> June  2016 </span> -->
 		</dt>
 		<dd style="font-size:14px">
 		Instructors: <a href="http://web.cse.ohio-state.edu/~saday/" target="_blank"> <i> Prof.</i> P. Sadayappan </a> and
@@ -172,7 +172,7 @@
 		<dl>
             <dt>
 		Computer Architecture
-		<span style="font-weight:normal; float: right"> Aug-Nov 2016 </span>
+    <!-- <span style="font-weight:normal; float: right"> Aug-Nov 2016 </span> -->
 		</dt>
 		<dd style="font-size:14px">
 		Instructor: <a href="http://www.pradeeprama.info/Home.html" target="_blank">
@@ -184,7 +184,7 @@
 		<dl>
                 <dt>
 		Probability and Computing
-		<span style="font-weight:normal; float: right"> Aug-Nov 2016 </span>
+    <!-- 		<span style="font-weight:normal; float: right"> Aug-Nov 2016 </span> -->
 		</dt>
 		<dd style="font-size:14px">
 		Instructor: <a href="https://sites.google.com/site/augustineiitm/" target="_blank">
@@ -196,7 +196,7 @@
 		<dl>
                 <dt>
 		Indexing and Searching in Large Datasets
-		<span style="font-weight:normal; float: right"> Aug-Nov 2016 </span>
+    <!--  <span style="font-weight:normal; float: right"> Aug-Nov 2016 </span> -->
 		</dt>
 		<dd style="font-size:14px">
 		 Instructor: <a href="http://www.cse.iitm.ac.in/~sayan/" target="_blank"> Dr. Sayan Ranu </a>
