updating misc.html

--- a/misc.html
+++ b/misc.html
@@ -88,13 +88,40 @@
 -->
             <div class="col-lg-12">
 <h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Miscellaneous </h3>
+
+<h3>Awards and Accomplishments</h3>
 <!-- Pic saying page is under construction-->
+<!--
      <p style="text-align:center; "><img style="max-width: 50%; margin-top: 1rem;" src="./img/construction.gif" alt="under_construction" border="2" /></p>
+-->
+<div style="font-size:18px;">
+<ul>
+<li>
+<dl>
+        Google Summer of Code 2017 -- <a href= "https://summerofcode.withgoogle.com/projects/#5643969684832256" target="_blank"> 
+        <em>Smart Data Structures in CUDA</em> </a>
+        &#91;&#160;Organization: <em>CERN-HSF</em>&#160;&#93;
+</dl>
+</li>
+<li>
+<dl>
+        Secured <b>4th place</b> in HiPC 2016 Student Parallel Programming Challenge (Intel track).
+</dl>
+</li>
+<li>
+<dl>
+        Secured <b>4th place</b>  in HiPC 2015 Student Parallel Programming Challenge (Intel track).
+</dl>
+</li>
+</div>
+
         </div>
       
 
         </div>
         <!-- /.row -->
+
+
 <hr />
 
     </div>
