misc.html modified

--- a/misc.html
+++ b/misc.html
@@ -96,6 +96,7 @@
 -->
 <div style="font-size:18px;">
 <ul>
+
 <li>
 <dl>
         Google Summer of Code 2017 -- <a href= "https://summerofcode.withgoogle.com/projects/#5643969684832256" target="_blank"> 
@@ -103,16 +104,25 @@
         &#91;&#160;Organization: <em>CERN-HSF</em>&#160;&#93;
 </dl>
 </li>
+
+<li>
+<dl>
+        Reviewer for <em>Embedded Systems Letters</em> 
+</dl>
+</li>
+
 <li>
 <dl>
         Secured <b>4th place</b> in HiPC 2016 Student Parallel Programming Challenge (Intel track).
 </dl>
 </li>
+
 <li>
 <dl>
         Secured <b>4th place</b>  in HiPC 2015 Student Parallel Programming Challenge (Intel track).
 </dl>
 </li>
+
 </div>
 
         </div>
