modifying miscellaneous page

--- a/misc.html
+++ b/misc.html
@@ -101,7 +101,17 @@
 <dl>
         Google Summer of Code 2017 -- <a href= "https://summerofcode.withgoogle.com/projects/#5643969684832256" target="_blank"> 
         <em>Smart Data Structures in CUDA</em> </a>
-        &#91;&#160;Organization: <em>CERN-HSF</em>&#160;&#93;
+<span style="float:right;font-weight:normal; font-style:italic">
+<a href= "http://hepsoftwarefoundation.org/activities/gsoc.html" target="_blank"> 
+       <em>CMS, CERN-HSF</em> </a>
+</span>
+<p style="font-size:14px;">
+ Developed 
+<a href= "https://github.com/ssomesh/SALLOC/tree/master" target="_blank"> 
+        <em>SALLOC</em> </a>
+-- An arena based memory allocator for SIMT architectures. 
+ </p>
+
 </dl>
 </li>
 
