updating info on webpage

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
 	  Dept. of CSE<br/>
 	  IIT Madras - 600 036.<br/>
 	  Ph: +91 9791264972<br/>
-	  Email: somesh&#46;singh1992&#64;gmail&#46;com<br/>
+    Email: {firstname} (dot) {lastname}1992 (at) gmail (dot) com<br/>
 	</p>
 
         </div>
