--- a/research.html
+++ b/research.html
@@ -96,6 +96,16 @@
       </p>
 	<footer>Bertrand Russell (1872–1970)</footer>
 </blockquote>
+<blockquote class="blockquote" style="background:#eff">
+      <p>
+  <i> &#34;It is the mark of an instructed mind to rest assured with that
+degree of precision that the nature of the subject admits, and
+not to seek exactness when only an approximation of the
+truth is possible. &#34; </i>
+      </p>
+  <footer>Aristotle</footer>
+</blockquote>
+
 
 <!-- <p>
 I work on designing approximation techniques for parallel graph algorithms on GPU to improve performance.
