display of last modified date

--- a/index.html
+++ b/index.html
@@ -142,8 +142,19 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
           width="160" height="25"  border="0" alt="View Somesh Singh's profile on LinkedIn">
 
     </a>
+<hr>
 
-</div>
+  <div align="left">
+
+  <p>
+    <script language="Javascript">
+document.write("This page was last modified on: " + document.lastModified +"");
+    </script>  
+  </p>
+  </div>
+
+
+  </div>
 
     </div>
     <!-- /.container -->
