display of last modified date

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
 
   <p>
     <script language="Javascript">
-document.write("This page was last modified on: " + document.lastModified +"");
+     var date = new Date(document.lastModified); 
+      document.write("Last updated: " + date + ".");
     </script>  
   </p>
   </div>
