display of last modified date

--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
 
   <p>
     <script language="Javascript">
-     var date = new Date(document.lastModified); 
-      document.write("Last updated: " + date + ".");
+      document.write("Last updated: " + document.lastModifiedDate + ".");
     </script>  
   </p>
   </div>
