--- a/index.html
+++ b/index.html
@@ -148,7 +148,31 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
 
   <p>
     <script language="Javascript">
-      document.write("Last updated: " + document.lastModifiedDate + ".");
+    var dLM = new Date(Date.parse(document.lastModified));
+
+        var day = new Array("Sonntag","Montag","Dienstag",
+            "Mittwoch","Donnerstag","Freitag","Samstag");
+        var month = new Array("Januar","Februar","März","April","Mai","Juni",
+            "Juli","August","September","Oktober","November","Dezember");
+
+        var date = dLM.getDate();
+        var day = day[dLM.getDay()];
+        var year = dLM.getFullYear();
+  var month = month[dLM.getMonth()];
+        var hours = dLM.getHours();
+        var minutes = dLM.getMinutes();
+        var seconds = dLM.getSeconds();
+
+        if (date<10) date = "0"+date;
+        if (month<10) month = "0"+month;
+        if (hours<10) hours = "0"+hours;
+        if (minutes<10) minutes = "0"+minutes;
+        if (seconds<10) seconds = "0"+seconds;
+
+        document.write("Last Modified: "
+            +day+", "+date+". "+month+" "+year+"."); 
+        //document.write("Last Modified: "
+        //    +day+", "+date+". "+month+" "+year+", um "+hours+":"+minutes+":"+seconds); 
     </script>  
   </p>
   </div>
