display of last modified date

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
         if (minutes<10) minutes = "0"+minutes;
         if (seconds<10) seconds = "0"+seconds;
 
-        document.write("Last Modified: "
+        document.write("Last updated: "
             + month+" "+date+", "+year+"."); 
         //document.write("Last Modified: "
         //    +day+", "+date+". "+month+" "+year+", um "+hours+":"+minutes+":"+seconds); 
