adding an achievement

--- a/misc.html
+++ b/misc.html
@@ -99,6 +99,15 @@
 
 <li>
 <dl>
+     Committee Member in 
+  <a href= "https://ppopp18.sigplan.org/committee/ppopp-2018-artifact-evaluation-committee" target="_blank"> 
+       Artifact Evaluation Committee </a>
+    for PPoPP 2018
+</dl>
+</li>
+
+<li>
+<dl>
         Google Summer of Code 2017 -- <a href= "https://summerofcode.withgoogle.com/projects/#5643969684832256" target="_blank"> 
         <em>Smart Data Structures in CUDA</em> </a>
 <span style="float:right;font-weight:normal; font-style:italic">
