--- a/misc.html
+++ b/misc.html
@@ -108,7 +108,7 @@
 
 <li>
 <dl>
-        Google Summer of Code 2017 -- <a href= "https://summerofcode.withgoogle.com/projects/#5643969684832256" target="_blank"> 
+        Google Summer of Code 2017 : <a href= "https://summerofcode.withgoogle.com/projects/#5643969684832256" target="_blank"> 
         <em>Smart Data Structures in CUDA</em> </a>
 <span style="float:right;font-weight:normal; font-style:italic">
 <a href= "http://hepsoftwarefoundation.org/activities/gsoc.html" target="_blank"> 
