--- a/misc.html
+++ b/misc.html
@@ -102,7 +102,10 @@
      Committee Member in 
   <a href= "https://ppopp18.sigplan.org/committee/ppopp-2018-artifact-evaluation-committee" target="_blank"> 
        Artifact Evaluation Committee </a>
-    for PPoPP 2018
+     for 
+  <a href= "https://ppopp18.sigplan.org/" target="_blank"> 
+        PPoPP 2018 </a>
+	
 </dl>
 </li>
 
