--- a/research.html
+++ b/research.html
@@ -101,7 +101,29 @@
 I work on designing approximation techniques for parallel graph algorithms on GPU to improve performance.
 </p> -->
 
-<!-- <h2 > Publications </h2> -->
+<p style="color:black">
+<h3><u>Publications</u> </h3> 
+</p>
+
+<h3 style="font-size: 15pt">
+Scalable and Performant Graph Processing on GPUs using Approximate Computing
+</h3>
+<h4 style="font-size: 13pt">Somesh Singh,&#32;Rupesh Nasre</h4>
+<h4 style="font-size: 13pt">in IEEE TMSCS 2018.</h4>
+<p style="font-size: 11pt">
+  <a data-toggle="collapse" href="#tmscs" aria-expanded="false" aria-controls="tmscs">
+   (abstract) 
+  </a>
+</p>
+<p class="collapse" id="tmscs" style="font-size: 11pt">
+Graph algorithms are widely used in several application domains. It has been established that parallelizing graph
+algorithms is challenging. The parallelization issues get exacerbated when graphics processing units (GPUs) are used to execute
+graph algorithms. While the prior art has shown effective parallelization of several graph algorithms on GPUs, a few algorithms are still
+expensive. In this work, we address the scalability issues in graph parallelization. In particular, we aim to improve the execution time by
+tolerating a little approximation in the computation. We study the effects of four heuristic approximations on six graph algorithms with
+five graphs and show that if an application allows for small inaccuracy, this can be leveraged to achieve considerable performance
+benefits. We also study the effects of the approximations on GPU-based processing and provide interesting takeaways.
+</p>
 
         </div>
       
