adding TA work details

--- a/academics.html
+++ b/academics.html
@@ -207,6 +207,71 @@
 </div>
 
 
+<br/>
+<h3>Teaching Assistance</h3>
+<div style="font-size: 20px">
+         <ul>
+      <li>
+    <dl>
+                <dt>
+    Introduction to Programming lab
+    </dt>
+  <!--
+    <dd style="font-size:14px">
+    Instructors: 
+    </dd> -->
+    </dl>
+      </li>
+      <li>
+    <dl>
+                <dt>
+    Advanced Algorithms
+    </dt>
+  <!--
+    <dd style="font-size:14px">
+    Instructors: <a href="http://www.cse.iitm.ac.in/~rajsekar/" target="_blank">
+    Dr. Rajsekar Manokaran </a> and
+    <a href="https://rakri.github.io/" target="_blank">
+    Dr. Ravishankar Krishnaswamy </a>
+    </dd>  -->
+    </dl>
+      </li>
+      <li>
+    <dl>
+                <dt>
+    Digital System Testing and Testable Design
+    </dt>
+  <!--
+    <dd style="font-size:14px">
+     Instructors: <a href="http://rise.cse.iitm.ac.in/people/faculty/kama/kama.html" target="_blank"> Dr. V. Kamakoti  </a> and
+            Dr. V. Visvanathan
+    </dd>  -->
+    </dl>
+      </li>
+      <li>
+    <dl>
+                <dt>
+    GPU Programming
+    </dt>
+  <!--
+    <dd style="font-size:14px">
+    Instructor: <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>
+    </dd>  -->
+    </dl>
+      </li>
+      <li>
+    <dl>
+                <dt>
+    Object-Oriented Algorithms Implementation and Analysis lab
+    </dt>
+  <!--
+    <dd style="font-size:14px">
+      Instructor: <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>
+    </dd>  -->
+    </dl>
+      </li>
+  </ul>
+</div>
 
            </div>
 
