--- a/academics.html
+++ b/academics.html
@@ -159,7 +159,7 @@
 	    <li>
 		<dl>
                 <dt>
-		High-Performance Parallel Computing
+                  High-Performance Parallel Computing <span style="font-weight:normal;font-size:18px">  (GIAN course)  </span>
     <!--  <span style="font-weight:normal; float: right"> June  2016 </span> -->
 		</dt>
 		<dd style="font-size:16px">
