--- a/academics.html
+++ b/academics.html
@@ -199,7 +199,7 @@
     <!--  <span style="font-weight:normal; float: right"> Aug-Nov 2016 </span> -->
 		</dt>
 		<dd style="font-size:16px">
-		 Instructor: <a href="http://www.cse.iitm.ac.in/~sayan/" target="_blank"> Dr. Sayan Ranu </a>
+		 Instructor: <a href="http://www.cse.iitd.ac.in/~sayan/" target="_blank"> Dr. Sayan Ranu </a>
 		</dd>
 		</dl>
 	    </li>
