updation of achievements

--- a/research.html
+++ b/research.html
@@ -124,6 +124,8 @@ Scalable and Performant Graph Processing on GPUs using Approximate Computing
   <a data-toggle="collapse" href="#tmscs" aria-expanded="false" aria-controls="tmscs">
    (abstract) 
   </a>
+
+  <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8264799" target="_blank">(pdf)</a>
 </p>
 <p class="collapse" id="tmscs" style="font-size: 11pt">
 Graph algorithms are widely used in several application domains. It has been established that parallelizing graph
