--- a/mentor.html
+++ b/mentor.html
@@ -95,6 +95,24 @@
 <!--
      <p style="text-align:center; "><img style="max-width: 50%; margin-top: 1rem;" src="./img/construction.gif" alt="under_construction" border="2" /></p> 
 -->
+ <h3>M.Tech Project</h3>
+ <div style="font-size:16px;">
+ <ul>
+ <li>
+ <dl>
+   <dt> 
+      Tejas Shah<span style="font-weight:normal;">,
+   <a href = "https://www.iitm.ac.in/" target="_blank">IIT Madras</a>, Chennai </span> 
+        <span style="float:right;font-weight:normal; font-style: italic;"> 2017-18  </span>    
+   </dt>
+   <dd style="color:#C4820E;">
+       Approximate Betweenness Centrality
+   </dd>   
+ </dl> 
+ </li>
+ </ul>
+ </div>
+
 <h3> Interns </h3>
 <div style="font-size:16px;">
 <ul>
