--- a/misc.html
+++ b/misc.html
@@ -98,6 +98,24 @@
 <ul>
 
 <li>
+ <dl>
+      Google Summer of Code 2018 : <a href= "https://summerofcode.withgoogle.    com/projects/#5676647777304576" target="_blank"> 
+      <em>Optimize and Integrate Standalone Tracking Library (SixTrackLib)
+ </em> </a>
+ <span style="float:right;font-weight:normal; font-style:italic">
+ <a href= "http://hepsoftwarefoundation.org/activities/gsoc.html" target="_blank">         <em>SixTrack, CERN-HSF</em> </a>
+ </span>
+ <p style="font-size:16px; display:list-item; list-style-type: circle; list-style-  position:inside;">  <!-- color:#00A598"-->
+ Developed a standalone parallel implementation of (a part of) SixTrackLib.
+ The contributed code is available
+ <a href="https://github.com/ssomesh/sixtracklib_gsoc18/tree/master/"               target="_blank"> 
+     here</a>.
+ </p>
+ </dl>
+ </li> 
+
+
+<li>
 <dl>
      Committee Member in 
   <a href= "https://ppopp18.sigplan.org/committee/ppopp-2018-artifact-evaluation-committee" target="_blank"> 
