--- a/mentor.html
+++ b/mentor.html
@@ -124,7 +124,7 @@
        <span style="float:right;font-weight:normal; font-style: italic;">December 2016 </span>
   </dt>
   <dd>  
-      <a href="docs/code/MilindSrivastava-ImageSegmentation.tar.gz" download> 
+      <a href="docs/code/MilindSrivastava-ImageSegmentation.tar.gz" download style="color:#C4820E;"> 
       Graph-based Image Segmentation </a> 
   </dd>
 </dl>
@@ -136,7 +136,7 @@
        <span style="float:right; font-weight:normal; font-style: italic;">June 2015 </span>
  </dt>
   <dd> 
-      <a href="docs/code/RonakShukla-ObjectTrackingSegmentation.tar.gz" download> 
+      <a href="docs/code/RonakShukla-ObjectTrackingSegmentation.tar.gz" download style="color:#C4820E;"> 
       Image Segmentation and Object Tracking on GPU </a>
  </dd>
 </dl>
