--- a/misc.html
+++ b/misc.html
@@ -135,7 +135,7 @@
 <a href= "http://hepsoftwarefoundation.org/activities/gsoc.html" target="_blank"> 
        <em>CMS, CERN-HSF</em> </a>
 </span>
-<p style="font-size:14px;">
+<p style="font-size:14px; display:list-item; list-style-type: circle; list-         style-position:inside;">
  Developed 
 <a href= "https://github.com/ssomesh/SALLOC/tree/master" target="_blank"> 
         <em>SALLOC</em> </a>
