--- a/academics.html
+++ b/academics.html
@@ -95,131 +95,130 @@
 <h3>Coursework</h3>
 <div style="font-size: 16px">
          <ul>
-	    <li>
-		<dl>
+      <li>
+    <dl>
                 <dt>
-		Advanced Data Structures and Algorithms
-    <!--		<span style="font-weight:normal; float: right"> Aug-Nov 2014 </span> -->
-		</dt>
-		<dd style="font-size:14px">
-		Instructors: <a href="https://www.cse.iitm.ac.in/~meghana/" target="_blank">
-		Dr. Meghana Nasre </a> and
-		<a href="https://sites.google.com/site/augustineiitm/" target="_blank">
-		Dr. John Augustine </a>
-		</dd>
-		</dl>
-	    </li>
-	    <li>
-		<dl>
-                <dt>
-		Mathematical Concepts for Computer Science
-    <!--		<span style="font-weight:normal; float: right"> Aug-Nov 2014 </span> -->
-		</dt>
-		<dd style="font-size:14px">
-		Instructor: <a href="http://www.cse.iitm.ac.in/~bvrr/" target="_blank">
-		Dr. Raghavendra Rao B. V. </a>
-		</dd>
-		</dl>
-	    </li>
-	    <li>
-		<dl>
-                <dt>
-		Program Analysis
-    <!--    <span style="font-weight:normal; float: right"> Jan-May 2015 </span> -->
-		</dt>
-		<dd style="font-size:14px">
-		Instructor: <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>
-		</dd>
-		</dl>
-	    </li>
-	    <li>
-		<dl>
-                <dt>
-		Digital Design Verification
-    <!-- <span style="font-weight:normal; float: right"> Jan-May 2015 </span> -->
-		</dt>
-		<dd style="font-size:14px">
-		 Instructors: <a href="http://rise.cse.iitm.ac.in/people/faculty/kama/kama.html" target="_blank"> Dr. V. Kamakoti  </a> and
-			      Dr. V. Visvanathan
-		</dd>
-		</dl>
-	    </li>
-	    <li>
-		<dl>
-                <dt>
-		CAD for VLSI Systems
-    <!-- 	<span style="font-weight:normal; float: right"> Aug-Nov 2015 </span> -->
-		</dt>
-		<dd style="font-size:14px">
-		 Instructors: <a href="http://rise.cse.iitm.ac.in/people/faculty/kama/kama.html" target="_blank"> Dr. V. Kamakoti </a> and
-			      Dr. V. Visvanathan
-		</dd>
-		</dl>
-	    </li>
-	    <li>
-		<dl>
-                <dt>
-                  High-Performance Parallel Computing <span style="font-weight:normal;font-size:18px">  (GIAN course)  </span>
-    <!--  <span style="font-weight:normal; float: right"> June  2014 </span> -->
-		</dt>
-		<dd style="font-size:14px">
-		Instructors: <a href="http://web.cse.ohio-state.edu/~saday/" target="_blank"> <i> Prof.</i> P. Sadayappan </a> and
-		<a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>
-		</dd>
-		</dl>
-	    </li>
-	    <li>
-		<dl>
-            <dt>
-		Computer Architecture
+    Advanced Data Structures and Algorithms
     <!-- <span style="font-weight:normal; float: right"> Aug-Nov 2014 </span> -->
-		</dt>
-		<dd style="font-size:14px">
-		Instructor: <a href="http://www.pradeeprama.info/Home.html" target="_blank">
-		Dr. Pradeep Ramachandran </a>
-		</dd>
-		</dl>
-	    </li>
-	    <li>
-		<dl>
+    </dt>
+    <dd style="font-size:14px">
+    Instructors: <a href="https://www.cse.iitm.ac.in/~meghana/" target="_blank">
+    Dr. Meghana Nasre </a> and
+    <a href="https://sites.google.com/site/augustineiitm/" target="_blank">
+    Dr. John Augustine </a>
+    </dd>
+    </dl>
+      </li>
+      <li>
+    <dl>
                 <dt>
-		Probability and Computing
-    <!-- 		<span style="font-weight:normal; float: right"> Aug-Nov 2014 </span> -->
-		</dt>
-		<dd style="font-size:14px">
-		Instructor: <a href="https://sites.google.com/site/augustineiitm/" target="_blank">
-		Dr. John Augustine </a>
-		</dd>
-		</dl>
-	    </li>
-	    <li>
-		<dl>
+    Mathematical Concepts for Computer Science
+    <!-- <span style="font-weight:normal; float: right"> Aug-Nov 2014 </span> -->
+    </dt>
+    <dd style="font-size:14px">
+    Instructor: <a href="http://www.cse.iitm.ac.in/~bvrr/" target="_blank">
+    Dr. Raghavendra Rao B. V. </a>
+    </dd>
+    </dl>
+      </li>
+      <li>
+    <dl>
                 <dt>
-		Indexing and Searching in Large Datasets
-    <!--  <span style="font-weight:normal; float: right"> Aug-Nov 2014 </span> -->
-		</dt>
-		<dd style="font-size:14px">
-		 Instructor: <a href="http://www.cse.iitd.ac.in/~sayan/" target="_blank"> Dr. Sayan Ranu </a>
-		</dd>
-		</dl>
-	    </li>
-	</ul>
-</div>
+    Program Analysis
+    <!-- <span style="font-weight:normal; float: right"> Jan-May 2015 </span> -->
+    </dt>
+    <dd style="font-size:14px">
+    Instructor: <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>
+    </dd>
+    </dl>
+      </li>
+      <li>
+    <dl>
+                <dt>
+    Digital Design Verification
+    <!-- <span style="font-weight:normal; float: right"> Jan-May 2015 </span> -->
+    </dt>
+    <dd style="font-size:14px">
+     Instructors: <a href="http://rise.cse.iitm.ac.in/people/faculty/kama/kama.html" target="_blank"> Dr. V. Kamakoti  </a> and
+            Dr. V. Visvanathan
+    </dd>
+    </dl>
+      </li>
+      <li>
+    <dl>
+                <dt>
+    CAD for VLSI Systems
+    <!-- <span style="font-weight:normal; float: right"> Aug-Nov 2015 </span> -->
+    </dt>
+    <dd style="font-size:14px">
+     Instructors: <a href="http://rise.cse.iitm.ac.in/people/faculty/kama/kama.html" target="_blank"> Dr. V. Kamakoti </a> and
+            Dr. V. Visvanathan
+    </dd>
+    </dl>
+      </li>
+      <li>
+    <dl>
+                <dt>
+    High-Performance Parallel Computing <span style="font-weight:normal;font-size:16px">  (GIAN course)  </span>
+    <!-- <span style="font-weight:normal; float: right"> June  2016 </span> -->
+    </dt>
+    <dd style="font-size:14px">
+    Instructors: <a href="http://web.cse.ohio-state.edu/~saday/" target="_blank"> <i> Prof.</i> P. Sadayappan </a> and
+    <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>
+    </dd>
+    </dl>
+      </li>
+      <li>
+    <dl>
+            <dt>
+    Computer Architecture
+    <!-- <span style="font-weight:normal; float: right"> Aug-Nov 2016 </span> -->
+    </dt>
+    <dd style="font-size:14px">
+    Instructor: <a href="http://www.pradeeprama.info/Home.html" target="_blank">
+    Dr. Pradeep Ramachandran </a>
+    </dd>
+    </dl>
+      </li>
+      <li>
+    <dl>
+                <dt>
+    Probability and Computing
+    <!-- <span style="font-weight:normal; float: right"> Aug-Nov 2016 </span> -->
+    </dt>
+    <dd style="font-size:14px">
+    Instructor: <a href="https://sites.google.com/site/augustineiitm/" target="_blank">
+    Dr. John Augustine </a>
+    </dd>
+    </dl>
+      </li>
+      <li>
+    <dl>
+                <dt>
+    Indexing and Searching in Large Datasets
+    <!-- <span style="font-weight:normal; float: right"> Aug-Nov 2016 </span> -->
+    </dt>
+    <dd style="font-size:14px">
+     Instructor: <a href="http://www.cse.iitd.ac.in/~sayan/" target="_blank"> Dr. Sayan Ranu </a>
+    </dd>
+    </dl>
+      </li>
+  </ul>
+<!-- </div> -->
 
+<hr />
 
-<br/>
-<h3>Teaching Assistance</h3>
-<div style="font-size: 14px">
+<h3 >Teaching Assistance</h3>
+<!-- <div style="font-size: 16px"> -->
          <ul>
       <li>
     <dl>
                 <dt>
     Introduction to Programming lab
     </dt>
-  <!--
+  
     <dd style="font-size:14px">
-    Instructors: 
-    </dd> -->
+    </dd>
     </dl>
       </li>
       <li>
@@ -227,13 +226,13 @@
                 <dt>
     Advanced Algorithms
     </dt>
-  <!--
     <dd style="font-size:14px">
+  <!--
     Instructors: <a href="http://www.cse.iitm.ac.in/~rajsekar/" target="_blank">
     Dr. Rajsekar Manokaran </a> and
     <a href="https://rakri.github.io/" target="_blank">
-    Dr. Ravishankar Krishnaswamy </a>
-    </dd>  -->
+    Dr. Ravishankar Krishnaswamy </a> -->
+    </dd>  
     </dl>
       </li>
       <li>
@@ -241,11 +240,11 @@
                 <dt>
     Digital System Testing and Testable Design
     </dt>
-  <!--
     <dd style="font-size:14px">
+  <!--
      Instructors: <a href="http://rise.cse.iitm.ac.in/people/faculty/kama/kama.html" target="_blank"> Dr. V. Kamakoti  </a> and
-            Dr. V. Visvanathan
-    </dd>  -->
+            Dr. V. Visvanathan  -->
+    </dd> 
     </dl>
       </li>
       <li>
@@ -253,10 +252,10 @@
                 <dt>
     GPU Programming
     </dt>
-  <!--
     <dd style="font-size:14px">
-    Instructor: <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>
-    </dd>  -->
+  <!--
+    Instructor: <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a> -->
+    </dd>  
     </dl>
       </li>
       <li>
@@ -264,15 +263,14 @@
                 <dt>
     Object-Oriented Algorithms Implementation and Analysis lab
     </dt>
-  <!--
     <dd style="font-size:14px">
-      Instructor: <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>
-    </dd>  -->
+  <!--
+      Instructor: <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>  -->
+    </dd> 
     </dl>
       </li>
   </ul>
 </div>
-
            </div>
 
         </div>
