--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </ul>
  -->
         <p>
-	Welcome! I am a fourth year Ph.D. student at the department of 
+	Welcome! I am a fifth year Ph.D. student at the department of 
 <a href="http://www.cse.iitm.ac.in/" target="_blnk">
 Computer Science and Engineering 
 </a>
@@ -105,7 +105,7 @@ at
 IIT Madras</a>. 
 I am advised by 
 <a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>. 
-My research focuses on designing approximation techniques for parallel graph algorithms on GPUs.  
+My research focuses on designing techniques for accelerating graph-analytics on <em>large</em> graphs using GPUs, aided by approximate computing.
         </p>
 	 <p>
         I graduated from 
