--- a/research.html
+++ b/research.html
@@ -115,10 +115,10 @@ I work on designing approximation techniques for parallel graph algorithms on GP
 <h3><u>Publications</u> </h3> 
 </p>
 
-<h3 style="font-size: 15pt">
+<h3 style="font-size: 16pt">
 Scalable and Performant Graph Processing on GPUs using Approximate Computing
 </h3>
-<h4 style="font-size: 13pt">Somesh Singh,&#32;Rupesh Nasre</h4>
+<h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre</i></h4>
 <h4 style="font-size: 13pt">in IEEE TMSCS 2018.</h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#tmscs" aria-expanded="false" aria-controls="tmscs">
@@ -136,6 +136,37 @@ tolerating a little approximation in the computation. We study the effects of fo
 five graphs and show that if an application allows for small inaccuracy, this can be leveraged to achieve considerable performance
 benefits. We also study the effects of the approximations on GPU-based processing and provide interesting takeaways.
 </p>
+
+<h3 style="font-size: 16pt">
+ SixTrack Project: Status, Runtime Environment, and New Developments
+ </h3>
+ <h4 style="font-size: 13pt">with <i> Riccardo De Maria, J. Andersson, V.K. Berglyd Olsen, L. Field, M. Giovannozzi, P. D. Hermes, N. H&#248imyr,
+ S. Kostoglou, G. Iadarola, E. Mcintosh, A. Mereghetti, J. Molson, D. Pellegrini,
+ T. Persson, M. Schwinzerl, E.H. Maclean, K.N. Sjobak, I. Zacharov </i> <!-- <i>et al.</i>  --> </h4>
+ <h4 style="font-size: 13pt">in International Computational Accelerator Physics Conference 2018.</h4>
+ <p style="font-size: 11pt">
+   <a data-toggle="collapse" href="#icap" aria-expanded="false" aria-controls="icap">
+    (abstract) 
+   </a>
+ 
+   <a href="http://icap2018.vrws.de/papers/tupaf02.pdf" target="_blank">(pdf)</a> 
+ </p>
+ 
+ <p class="collapse" id="icap" style="font-size: 11pt">
+SixTrack is a single-particle tracking code for high-energy circular accelerators routinely used at CERN for the Large Hadron Collider (LHC), its luminosity upgrade (HL-LHC), the Future Circular Collider (FCC), and the Super Proton Synchrotron (SPS) simulations. 
+The code is based on a 6D symplectic tracking engine, which is optimised for long-term tracking simulations and delivers fully reproducible results on several platforms. 
+It also includes multiple scattering engines for beam-matter interaction studies, as well as facilities to run integrated simulations with FLUKA and GEANT4.
+These features differentiate SixTrack from general-purpose, optics-design software like MAD-X. 
+The code recently underwent a major restructuring to merge advanced features into a single branch, such as multiple ion species, interface with external codes, and high-performance input/output (XRootD, HDF5). 
+This restructuring also removed a large number of build flags, instead enabling/disabling the functionality at run-time. 
+In the process, the code was moved from Fortran 77 to Fortran 2018 standard, also allowing and achieving a better modularization.  
+Physics models (beam-beam effects, RF-multipoles, current carrying wires, solenoid, and electron lenses) and methods (symplecticity check) have also been reviewed and refined to offer more accurate results.  
+The SixDesk runtime environment allows the user to manage the large batches of simulations required for accurate predictions of the dynamic aperture.
+SixDesk supports CERN LSF and HTCondor batch systems, as well as the BOINC infrastructure in the framework of the LHC@Home volunteering computing project.
+SixTrackLib is a new library aimed at providing a portable and flexible tracking engine for single- and multi-particle problems using the models and formalism of SixTrack. 
+The tracking routines are implemented in a parametrized C code that is specialised to run vectorized in CPUs and GPUs, by using SIMD intrinsics, OpenCL 1.2, and CUDA technologies.
+This contribution presents the status of the code and an outlook on future developments of SixTrack, SixDesk, and SixTrackLib.
+ </p>
 
         </div>
       
