--- a/research.html
+++ b/research.html
@@ -140,7 +140,7 @@ benefits. We also study the effects of the approximations on GPU-based processin
 <h3 style="font-size: 16pt">
  SixTrack Project: Status, Runtime Environment, and New Developments
  </h3>
- <h4 style="font-size: 13pt">with <i> Riccardo De Maria, J. Andersson, V.K. Berglyd Olsen, L. Field, M. Giovannozzi, P. D. Hermes, N. H&#248imyr,
+ <h4 style="font-size: 13pt">with <i> R. De Maria, J. Andersson, V.K. Berglyd Olsen, L. Field, M. Giovannozzi, P. D. Hermes, N. H&#248imyr,
  S. Kostoglou, G. Iadarola, E. Mcintosh, A. Mereghetti, J. Molson, D. Pellegrini,
  T. Persson, M. Schwinzerl, E.H. Maclean, K.N. Sjobak, I. Zacharov </i> <!-- <i>et al.</i>  --> </h4>
  <h4 style="font-size: 13pt">in International Computational Accelerator Physics Conference 2018.</h4>
