--- a/research.html
+++ b/research.html
@@ -149,7 +149,7 @@ benefits. We also study the effects of the approximations on GPU-based processin
     (abstract) 
    </a>
  
-   <a href="http://icap2018.vrws.de/papers/tupaf02.pdf" target="_blank">(pdf)</a> 
+   <a href="docs/papers/icap18.pdf" target="_blank">(pdf)</a> 
  </p>
  
  <p class="collapse" id="icap" style="font-size: 11pt">
