--- a/research.html
+++ b/research.html
@@ -137,12 +137,14 @@ five graphs and show that if an application allows for small inaccuracy, this ca
 benefits. We also study the effects of the approximations on GPU-based processing and provide interesting takeaways.
 </p>
 
+<hr />
+
 <h3 style="font-size: 16pt">
  SixTrack Project: Status, Runtime Environment, and New Developments
  </h3>
- <h4 style="font-size: 13pt">with <i> R. De Maria, J. Andersson, V.K. Berglyd Olsen, L. Field, M. Giovannozzi, P. D. Hermes, N. H&#248imyr,
+ <h4 style="font-size: 13pt"><font color="#696969">with</font> <i> R. De Maria, J. Andersson, V.K. Berglyd Olsen, L. Field, M. Giovannozzi, P. D. Hermes, N. H&#248imyr,
  S. Kostoglou, G. Iadarola, E. Mcintosh, A. Mereghetti, J. Molson, D. Pellegrini,
- T. Persson, M. Schwinzerl, E.H. Maclean, K.N. Sjobak, I. Zacharov </i> <!-- <i>et al.</i>  --> </h4>
+ T. Persson, M. Schwinzerl, E.H. Maclean, K.N. Sjobak, I. Zacharov, </i> <!-- <i>et al.</i>  --> </h4>
  <h4 style="font-size: 13pt">in International Computational Accelerator Physics Conference 2018.</h4>
  <p style="font-size: 11pt">
    <a data-toggle="collapse" href="#icap" aria-expanded="false" aria-controls="icap">
