--- a/research.html
+++ b/research.html
@@ -118,7 +118,7 @@ I work on designing approximation techniques for parallel graph algorithms on GP
 <h3 style="font-size: 16pt">
 Scalable and Performant Graph Processing on GPUs using Approximate Computing
 </h3>
-<h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre</i></h4>
+<h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre,</i></h4>
 <h4 style="font-size: 13pt">in IEEE TMSCS 2018.</h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#tmscs" aria-expanded="false" aria-controls="tmscs">
