--- a/misc.html
+++ b/misc.html
@@ -99,7 +99,7 @@
 
 <li>
  <dl>
-      Google Summer of Code 2018 : <a href= "https://summerofcode.withgoogle.com/projects/#5676647777304576" target="_blank"> 
+      Google Summer of Code 2018 : <a href= "https://summerofcode.withgoogle.com/archive/2018/projects/5152248673861632/" target="_blank"> 
       <em>Optimize and Integrate Standalone Tracking Library (SixTrackLib)
  </em></a>
  <span style="float:right;font-weight:normal; font-style:italic">
