re-wording the research statement

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ at
 IIT Madras</a>. 
 I am advised by 
 <a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>. 
-My research focuses on designing techniques for accelerating graph-analytics on <em>large</em> graphs using GPUs, aided by approximate computing.
+My research focuses on designing techniques for accelerating large-scale graph analytics on <!-- <em>large</em> graphs using --> GPUs, aided by approximate computing.
         </p>
 	 <p>
         I graduated from 
