--- a/research.html
+++ b/research.html
@@ -125,7 +125,7 @@ Scalable and Performant Graph Processing on GPUs using Approximate Computing
    (abstract) 
   </a>
 
-  <a href="docs/papers/tmscs" target="_blank">(pdf)</a>
+  <a href="docs/papers/tmscs.pdf" target="_blank">(pdf)</a>
 </p>
 <p class="collapse" id="tmscs" style="font-size: 11pt">
 Graph algorithms are widely used in several application domains. It has been established that parallelizing graph
