--- a/academics.html
+++ b/academics.html
@@ -269,6 +269,17 @@
     </dd> 
     </dl>
       </li>
+      <li>
+    <dl>
+                <dt>
+                  Computer Organization and Architecture Lab
+    </dt>
+    <dd style="font-size:14px">
+  <!--
+      Instructor: <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>  -->
+    </dd> 
+    </dl>
+      </li>
   </ul>
 </div>
            </div>
